--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-keras = "^2.6.0"
+tensorflow = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
