--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ authors = ["David Lee <davie.lee@unomic.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "~3.7"
+keras = "~2.0"
+tensorflow = "~1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
