--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/.classpath": false,
+        "**/.classpath": true,
         "**/.project": true,
         "**/.settings": true,
         "**/.factorypath": true
