--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "~3.7"
 keras = "~2.0"
 tensorflow = "~1"
+matplotlib = "~1.5"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
