--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,eclipse,pydev,pycharm+all,intellij+all,visualstudio,visualstudiocode,jupyternotebooks,venv,virtualenv,git
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,python,eclipse,pydev,pycharm+all,intellij+all,visualstudio,visualstudiocode,jupyternotebooks,venv,virtualenv,git
+# Created by https://www.toptal.com/developers/gitignore/api/git,venv,cuda,pydev,linux,macos,opencv,dotenv,direnv,python,eclipse,windows,virtualenv,pycharm+all,intellij+all,visualstudio,visualstudiocode,jupyternotebooks,vim,emacs
+# Edit at https://www.toptal.com/developers/gitignore?templates=git,venv,cuda,pydev,linux,macos,opencv,dotenv,direnv,python,eclipse,windows,virtualenv,pycharm+all,intellij+all,visualstudio,visualstudiocode,jupyternotebooks,vim,emacs
+
+### CUDA ###
+*.i
+*.ii
+*.gpu
+*.ptx
+*.cubin
+*.fatbin
+
+### direnv ###
+.direnv
+.envrc
+
+### dotenv ###
+.env
 
 ### Eclipse ###
 .metadata
@@ -67,6 +82,57 @@ local.properties
 ### Eclipse Patch ###
 # Spring Boot Tooling
 .sts4-cache/
+
+### Emacs ###
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+# network security
+/network-security.data
+
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -190,7 +256,6 @@ ipython_config.py
 #   git rm -r .ipynb_checkpoints/
 
 ### Linux ###
-*~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
@@ -211,7 +276,8 @@ ipython_config.py
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -231,6 +297,14 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+### OpenCV ###
+#OpenCV for Mac and Linux
+#build and release folders
+*/CMakeFiles
+*/CMakeCache.txt
+*/Makefile
+*/cmake_install.cmake
 
 ### PyCharm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -305,7 +379,6 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -397,7 +470,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -440,6 +512,26 @@ cython_debug/
 [Ss]cripts
 pyvenv.cfg
 pip-selfcheck.json
+
+### Vim ###
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
 
 ### VirtualEnv ###
 # Virtualenv
@@ -863,4 +955,4 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,python,eclipse,pydev,pycharm+all,intellij+all,visualstudio,visualstudiocode,jupyternotebooks,venv,virtualenv,git
+# End of https://www.toptal.com/developers/gitignore/api/git,venv,cuda,pydev,linux,macos,opencv,dotenv,direnv,python,eclipse,windows,virtualenv,pycharm+all,intellij+all,visualstudio,visualstudiocode,jupyternotebooks,vim,emacs
